--- a/package.json
+++ b/package.json
@@ -23,13 +23,7 @@
   },
   "homepage": "https://github.com/sim-mokomo/anywherePIP#readme",
   "dependencies": {
-    "@types/node": "^14.14.43",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "electron-squirrel-startup": "^1.0.0",
-    "eslint": "^7.25.0",
-    "prettier": "^2.2.1",
-    "typescript": "^4.2.4"
+    "electron-squirrel-startup": "^1.0.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.54",
@@ -37,7 +31,13 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
-    "electron": "^12.0.6"
+    "@types/node": "^14.14.43",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
+    "electron": "^12.0.7",
+    "eslint": "^7.26.0",
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.4"
   },
   "config": {
     "forge": {
