--- a/anywherePIP/anywherePIP.csproj
+++ b/anywherePIP/anywherePIP.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WindowEntity.cs" />
     <Compile Include="WindowService.cs" />
+    <Compile Include="WindowsService.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
